Added check to not skip CLASS run if pointers are passed; renamed setter and getter functions for (parametrised) ps to make consistent with names in draft (e.g. get_ns -|> get_n_s)
	modified:   Backends/src/frontends/classy_2_6_3.cpp
	modified:   Backends/src/frontends/classy_exo_2_7_0.cpp
	modified:   Backends/src/frontends/classy_exo_2_7_2.cpp
	modified:   CosmoBit/include/gambit/CosmoBit/CosmoBit_types.hpp
	modified:   CosmoBit/src/CosmoBit.cpp
	modified:   Printers/src/printers/asciiprinter/print_overloads.cpp
	modified:   Printers/src/printers/coutprinter/print_overloads.cpp
	modified:   Printers/src/printers/hdf5printer/print_overloads.cpp
	modified:   Printers/src/printers/hdf5printer_v2/print_overloads.cpp
	modified:   yaml_files/CosmoBit_inflationTest.yaml
	modified:   yaml_files/CosmoBit_testMP.yaml

--- a/yaml_files/CosmoBit_inflationTest.yaml
+++ b/yaml_files/CosmoBit_inflationTest.yaml
@@ -25,6 +25,7 @@ Parameters:
       fixed_value: 6.81383e+01
     tau_reio:
       fixed_value: 7.25805e-02
+    T_cmb: 2.72548
   #  ln10A_s: 3.0
   #  n_s: 1.0
   
@@ -163,6 +164,11 @@ Rules:
         output: tCl
         #k_pivot: 0.03
         #P_k_ini type : analytic_Pk
+
+  - capability: classy_primordial_parameters
+    function: set_classy_parameters_primordial_ps
+    module: CosmoBit
+
   
   #- capability: set_classy_parameters
   #  function: set_classy_parameters_parametrised_ps
