--- a/yaml_files/CosmoBit_exoClass.yaml
+++ b/yaml_files/CosmoBit_exoClass.yaml
@@ -2,8 +2,9 @@
 ## Test class vs. classy Backend and MontePython Likelihoods
 ##   - Using random sampler
 ##   - Using BAO (2014), Pantheon & Planck_SZ (sigma8) Likelihood
+##   - Using Planck 2018 (TT,TE,EE + lowE + lensing)
 ##
-##  To test this you need to make the backends 'class', 'alterbbn', 'classy' and 'montepythonlike'.
+##  To test this you need to make the backends 'alterbbn', 'classy_exo' and 'montepythonlike'.
 ##
 ## \author Sanjay Bloor <sanjay.bloor12@imperial.ac.uk>
 ##      \date 2019 Jun
@@ -11,23 +12,26 @@
 ## \author Janina Renk <janina.renk@fysik.su.se>
 ##      \date 2019 Jun
 ##
+## \author Patrick Stoecker <stoecker@physik.rwth-aachen.de>
+##      \date 2020 Feb
+##
 ##########################################################################
 
 
 
 #======== Input parameter declarations =======
 Parameters:
- 
+
  # --- import model parameters for models to scan over ---
- LCDM: !import include/LCDM_scan.yaml        # base LCDM
+ LCDM: !import include/LCDM_scan.yaml
 
  # Everything Neff and eta related
- #etaBBN:                             !import include/etaBBN.yaml
- #rCMB:                               !import include/rCMB.yaml
- #rBBN_rCMB:                          !import include/rBBN_rCMB.yaml
- #dNurCMB:                           !import include/dNurCMB.yaml
- #dNurBBN_dNurCMB:                  !import include/dNurBBN_dNurCMB.yaml
- #rBBN_rCMB_dNurBBN_dNurCMB:        !import include/rBBN_rCMB_dNurBBN_dNurCMB.yaml
+ #etaBBN:                         !import include/etaBBN.yaml
+ #rCMB:                           !import include/rCMB.yaml
+ #rBBN_rCMB:                      !import include/rBBN_rCMB.yaml
+ #dNurCMB:                        !import include/dNurCMB.yaml
+ #dNurBBN_dNurCMB:                !import include/dNurBBN_dNurCMB.yaml
+ #rBBN_rCMB_dNurBBN_dNurCMB:      !import include/rBBN_rCMB_dNurBBN_dNurCMB.yaml
  etaBBN_rBBN_rCMB_dNurBBN_dNurCMB: !import include/etaBBN_rBBN_rCMB_dNurBBN_dNurCMB.yaml
 
  # neutrino masses
@@ -35,12 +39,11 @@ Parameters:
  #StandardModel_mNudiff: !import include/StandardModel_mNudiff_NH_scan.yaml
  #StandardModel_mNudiff: !import include/StandardModel_mNudiff_IH_scan.yaml
 
- # Cosmological nuisance parameters (except for Planck CMB Likelihoods) 
+ # Cosmological nuisance parameters (except for Planck CMB Likelihoods)
  cosmo_nuisance_Pantheon: !import include/cosmo_nuisance_Pantheon.yaml
 
  # nuisance parameters in Planck likelihood
- cosmo_nuisance_Planck_lite: !import include/Planck_2018/cosmo_nuisance_Planck_lite_flat.yaml
- #cosmo_nuisance_Planck_lite: !import include/Planck_2018/cosmo_nuisance_Planck_lite_gauss.yaml
+ cosmo_nuisance_Planck_lite: !import include/Planck_2018/cosmo_nuisance_Planck_lite_gauss.yaml
 
  # model parameters for "DecayingDM_general"
  #AnnihilatingDM_general: !import include/AnnihilatingDM_general_scan.yaml
@@ -92,7 +95,6 @@ ObsLikes:
     module:       NeutrinoBit
     type:         bool
 
-
   - purpose:      LogLike
     capability:   Planck_highl_loglike
     function:     function_Planck_highl_TTTEEE_lite_2018_loglike
@@ -104,14 +106,6 @@ ObsLikes:
   - purpose:      LogLike
     capability:   Planck_lowl_loglike
     function:     function_Planck_lowl_TTEE_2018_loglike
-
-  - purpose:      Obs
-    capability:   Omega0_m
-    function:     get_Omega0_m_classy 
-
-  - purpose:      Observable
-    capability:   Omega0_r
-    function:     get_Omega0_r_classy
 
   # The total lnL from MontePython
   - purpose:      LogLike
@@ -158,49 +152,37 @@ Rules:
       Observables:
         WiggleZ: default
 
-  - capability: Omega0_m
-    function: compute_Omega0_m
-    dependencies:
-      - capability: Omega0_b
-        function: compute_Omega0_b
-        module: CosmoBit
-      - capability: Omega0_cdm
-        function: compute_Omega0_cdm
-        module: CosmoBit
-
   # to speed up Neff calc for testing
   - capability: AlterBBN_Input
     options:
-      failsafe: 1
+      failsafe: 3
       err: 0
-
-  # correlation matrix for BBN error calculation todo explain what that is!
-  - capability: BBN_abundances
-    options:
-      elements: [Yp, D, He3, Be7, Li7]
-      correlation_matrix: [[+1.000e00, +1.524e-2, +2.667e-2, +2.303e-2, +2.429e-2],
-                           [+1.524e-2, +1.000e00, -8.160e-1, -3.775e-1, -3.653e-1],
-                           [+2.667e-2, -8.160e-1, +1.000e00, +3.897e-1, +3.780e-1],
-                           [+2.303e-2, -3.775e-1, +3.897e-1, +1.000e00, +9.974e-1],
-                           [+2.429e-2, -3.653e-1, +3.780e-1, +9.974e-1, +1.000e00]]
-      relative_errors: [1.348e-3, 1.596e-2, 1.618e-2, 6.788e-2, 6.579e-2]
-
-  - capability: T_cmb
-    options:
-      T_cmb: 2.7255
 
   - capability: plc_3_0_init
     options:
       #plc_2.0_path: /PATH/TO/plc_2.0
       #plc_3.0_path: /PATH/TO/plc_3.0
 
+  # Compute a total (effective) f(z) instead of f(z) per channel
+  - capability: DarkAges_1_2_0_init
+    options:
+      f_eff_mode : true
+
+   # Allow for negative values of dNur_BBN and dNur_CMB
+   #  -> In this form, the option is set for all CosmoBit function and applies
+   #     for both parameters at once.
+   #     If this should only apply for dNur_BBN or dNur_CMB eclusively,
+   #     consider to make this as a rule of the respective capability / function.
+  - module: CosmoBit
+    options:
+      allow_negative_delta_N_ur: false
+
 #======== Logging setup ========
 Logger:
   redirection:
-    [Debug]      : "debug.log"
-    [Default]      : "default.log"
+    [Debug]     : "debug.log"
+    [Default]   : "default.log"
     [CosmoBit]  : "CosmoBit.log"
-    [Scanner]      : "Scanner.log"
 
 #======== Generic Name/Value Section ========
 KeyValues:
