--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -158,6 +158,8 @@ if(NOT PYTHONLIBS_FOUND)
           "     PYTHON_INCLUDE_DIR\n"
           "     PYTHON_INCLUDE_DIR2 (you might be able to get away without setting this one)\n"
           "     PYTHON_EXECUTABLE   (you might be able to get away without setting this one)")
+  message("${BoldRed}   Ditching CosmoBit as pybind11 has not been found.")
+  set(itch "${itch};CosmoBit")
 else()
   set(MIN_pybind11_VERSION "2.3.0")
   set(PREFERRED_pybind11_VERSION "2.3.0")
@@ -176,6 +178,8 @@ else()
     endif()
   else()
     message("${BoldRed}   The pybind11 library is not properly installed.${ColourReset}")
+    message("${BoldRed}   Ditching CosmoBit as pybind11 has not been found.")
+    set(itch "${itch};CosmoBit")
   endif()
   if(NOT pybind11_FOUND AND NOT EXISTS "${pybind11_CONTRIB_DIR}")
     message("${BoldRed}   CMake will now download and install pybind11 v${PREFERRED_pybind11_VERSION}.${ColourReset}")
