--- a/yaml_files/include/StandardModel_mNudiff_NH_scan.yaml
+++ b/yaml_files/include/StandardModel_mNudiff_NH_scan.yaml
@@ -57,8 +57,11 @@ alpha2  :  0       # second CP-violating Majorana phase
 
 # mass of lightest neutrino in eV
 mNu_light:
-  prior_type: flat
-  range: [0.,2.]
+  #prior_type: flat
+  #range: [0.,2.]
+  prior_type: log
+  range: [1e-5,1e1]
+  #range: [1e-7,1e1]
 
 # mass spliting dmNu21 in eV^2
 dmNu21:
