Added ScannerBit/lib/plugin_libraries.list to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -76,4 +76,5 @@ Backends/downloaded/**
 Backends/installed/**
 ScannerBit/downloaded/**
 ScannerBit/installed/**
+ScannerBit/lib/plugin_libraries.list
 
