Python link line correction
As discovered when installing on CSD3, if one has set PYTHON_LIBRARY for
installing pybind11, the final link line has -lpython2.7, which points
to the system version, rather than the version pointed to by
PYTHON_LIBRARY. If these versions are sufficiently different (e.g.
2.7.16 vs 2.7.5), then this causes a link error and gambit cannot
compile. This addition is intended as a conversation starter for a pull
request.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -593,6 +593,12 @@ endif()
 # Add the executables
 include(cmake/executables.cmake)
 
+# Add python library path to the final link line 
+if(PYTHON_LIBRARY)
+    get_filename_component(PYTHON_LIBRARY_PATH ${PYTHON_LIBRARY} DIRECTORY)
+    target_link_libraries(gambit PRIVATE -L${PYTHON_LIBRARY_PATH})
+endif()
+
 # Finish setting the link commands and rpath variables for ScannerBit
 if(EXISTS "${PROJECT_SOURCE_DIR}/ScannerBit/")
   include(${PROJECT_BINARY_DIR}/linkedout.cmake)
