Added support for explicit C standards 	modified:   CMakeLists.txt

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -264,6 +264,25 @@ else()
   endif()
 endif()
 
+# Check for C99, C11 and C18 support
+include(CheckCCompilerFlag)
+CHECK_C_COMPILER_FLAG("-std=c18" COMPILER_SUPPORTS_C18)
+if(COMPILER_SUPPORTS_C18)
+  set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -std=c18")
+else()
+  CHECK_C_COMPILER_FLAG("-std=c11" COMPILER_SUPPORTS_C11)
+  if(COMPILER_SUPPORTS_C11)
+    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -std=c11")
+  else()
+    CHECK_C_COMPILER_FLAG("-std=c99" COMPILER_SUPPORTS_C99)
+    if(COMPILER_SUPPORTS_C99)
+      set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -std=c99")
+    else()
+      message(FATAL_ERROR "The compiler ${CMAKE_C_COMPILER} has no C99 support. Please use a different C compiler.")
+    endif()
+  endif()
+endif()
+
 # Check for Boost
 set(Boost_NO_BOOST_CMAKE ON)
 find_package(Boost 1.41)
