Slight modification to the EnergyInjection models.
  * DecayingDM_photon and Decaying_DM_electron are now childs of DecayingDM_mixture which is then a child of the minimal DecayingDM_general model.
  * DecayingDM_general is suppossed to be a model which is used to flag CosmoBit that energy injection by dark matter decay is considered. It does not provide an injection spectrum.
  * Any new scenario should provide an custom injection spectrum and should relate (eitehr child or friend) to DecayingDM_general.
  * Simmilar arguments apply for AnnihilatingDM_general, which is the "flag"-model for s-wave annihilating dark matter.

	modified:       CosmoBit/include/gambit/CosmoBit/CosmoBit_rollcall.hpp
	modified:       CosmoBit/src/CosmoBit.cpp
	modified:       Models/include/gambit/Models/models/CosmoEnergyInjection.hpp
	modified:       Models/src/models/CosmoEnergyInjection.cpp
	modified:       yaml_files/CosmoBit_exoClass.yaml
	renamed:        yaml_files/include/AnnihilatingDM_general_scan.yaml -> yaml_files/include/AnnihilatingDM_mixture_scan.yaml
	renamed:        yaml_files/include/DecayingDM_general_scan.yaml -> yaml_files/include/DecayingDM_mixture_scan.yaml

--- a/yaml_files/CosmoBit_exoClass.yaml
+++ b/yaml_files/CosmoBit_exoClass.yaml
@@ -45,9 +45,9 @@ Parameters:
  # nuisance parameters in Planck likelihood
  cosmo_nuisance_Planck_lite: !import include/Planck_2018/cosmo_nuisance_Planck_lite_gauss.yaml
 
- # model parameters for "DecayingDM_general"
- #AnnihilatingDM_general: !import include/AnnihilatingDM_general_scan.yaml
- DecayingDM_general: !import include/DecayingDM_general_scan.yaml
+ # model parameters for "AnnihilatingDM_mixture" / "DecayingDM_mixture"
+ #AnnihilatingDM_mixture: !import include/AnnihilatingDM_mixture_scan.yaml
+ DecayingDM_mixture: !import include/DecayingDM_mixture_scan.yaml
 
 #======== Prior setup ========
 Priors:
