Fix "CosmoBit_testALP.yaml" and unify AlterBBN logging
	modified:       CosmoBit/include/gambit/CosmoBit/CosmoBit_rollcall.hpp
	modified:       CosmoBit/src/CosmoBit.cpp
	modified:       yaml_files/CosmoBit_testALP.yaml

--- a/yaml_files/CosmoBit_testALP.yaml
+++ b/yaml_files/CosmoBit_testALP.yaml
@@ -191,6 +191,9 @@ Rules:
       do_rejection: true
       reject_tau_bigger_than: 1e17
 
+  - capability: etaBBN
+    function: eta_BBN
+    module: etaBBN_rBBN_rCMB_dNurBBN_dNurCMB
 
 #======== Logging setup ========
 Logger:
