Removed  - all module Accessors (we never use them, and they just clutter up the rollcall macros)  - all usage of ini_code struct (hurrah!)
Made all DDCalc catches happen by reference, to avoid gcc warnings.

Fixed FORCE_O3 / FORCE_03 mixup.

	modified:   Backends/src/frontends/DDCalc_1_0_0.cpp
	modified:   Backends/src/frontends/DDCalc_1_1_0.cpp
	modified:   Backends/src/frontends/DDCalc_1_2_0.cpp
	modified:   Backends/src/frontends/DDCalc_2_0_0.cpp
	modified:   Backends/src/frontends/DDCalc_2_1_0.cpp
	modified:   Backends/src/frontends/DDCalc_2_2_0.cpp
	modified:   CMakeLists.txt
	modified:   ColliderBit/examples/ColliderBit_standalone_example.cpp
	modified:   DarkBit/examples/DarkBit_standalone_MSSM.cpp
	modified:   DarkBit/examples/DarkBit_standalone_ScalarSingletDM_Z2.cpp
	modified:   DarkBit/examples/DarkBit_standalone_WIMP.cpp
	modified:   DecayBit/examples/3bithit.cpp
	modified:   Elements/include/gambit/Elements/functors.hpp
	deleted:    Elements/include/gambit/Elements/ini_code_struct.hpp
	modified:   Elements/include/gambit/Elements/ini_functions.hpp
	modified:   Elements/include/gambit/Elements/module_macros_common.hpp
	modified:   Elements/include/gambit/Elements/module_macros_incore_defs.hpp
	modified:   Elements/src/functors.cpp
	modified:   Elements/src/ini_functions.cpp
	modified:   ExampleBit_A/examples/ExampleBit_A_standalone_example.cpp
	modified:   FlavBit/examples/FlavBit_standalone_example.cpp
	modified:   Models/include/gambit/Models/model_macros.hpp
	modified:   ScannerBit/include/gambit/ScannerBit/scannerbit.hpp

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -35,12 +35,12 @@
 # Require a minimum cmake version of 2.8.5
 cmake_minimum_required(VERSION 2.8.5 FATAL_ERROR)
 
-SET(CMAKE_BUILD_TYPE_STRING "Choose the type of build, options are: None Debug Release Release_03 RelWithDebInfo MinSizeRel.")
+SET(CMAKE_BUILD_TYPE_STRING "Choose the type of build, options are: None Debug Release Release_O3 RelWithDebInfo MinSizeRel.")
 if(NOT CMAKE_BUILD_TYPE AND NOT CMAKE_CONFIGURATION_TYPES)
   SET(CMAKE_BUILD_TYPE None CACHE STRING "${CMAKE_BUILD_TYPE_STRING}" FORCE)
-elseif(CMAKE_BUILD_TYPE STREQUAL "Release_03")
+elseif(CMAKE_BUILD_TYPE STREQUAL "Release_O3")
   SET(CMAKE_BUILD_TYPE Release CACHE STRING "${CMAKE_BUILD_TYPE_STRING}" FORCE)
-  SET(FORCE_03 TRUE)
+  SET(FORCE_O3 TRUE)
 endif()
 message("${Yellow}-- Build type is set to ${CMAKE_BUILD_TYPE} ${ColourReset}")
 
