--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -107,7 +107,7 @@ include(cmake/utilities.cmake)
 # We also need to search for PythonLibs before letting pybind11 look for them,
 # otherwise it seems to get it wrong.  Also, we need to add versions of python
 # greater than 3.3 manually, for compatibility with CMake 2.8.12.
-set(Python_ADDITIONAL_VERSIONS 3.4 3.5 3.6 3.7)
+set(Python_ADDITIONAL_VERSIONS 3.4 3.5 3.6 3.7 3.8 3.9)
 if (FORCE_PYTHON2)
   message("${BoldYellow}   Python 2 requested; searching for Python 2.7${ColourReset}")
   find_package(PythonInterp 2.7 REQUIRED)
@@ -160,8 +160,8 @@ if(NOT PYTHONLIBS_FOUND)
           "     PYTHON_EXECUTABLE")
   set(itch "${itch};CosmoBit")
 else()
-  set(MIN_pybind11_VERSION "2.4.3")
-  set(PREFERRED_pybind11_VERSION "2.4.3")
+  set(MIN_pybind11_VERSION "2.5.0")
+  set(PREFERRED_pybind11_VERSION "2.5.0")
   set(pybind11_CONTRIB_DIR "${PROJECT_SOURCE_DIR}/contrib/pybind11")
   find_package(pybind11 QUIET)
   if(NOT pybind11_FOUND AND EXISTS "${pybind11_CONTRIB_DIR}")
